# vectra-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerrun.aws.json  Railway.toml  deployment.txt  fly.toml  railway.toml  startup.sh
.ebextensions/: port.config
.github/workflows/: deploy.yml
.sqlx/: query-175987c0abc1383bfef211e5ead1180326141d2afc79af7bcdf27fec9b3d4e14.json  query-42c23225bb18b45367c3dbf98884b62e06459187bfdb0f9551e415b15cffab99.json  query-57d30148565b3eb0542f8f11f692107f8e2f2e0df2e3ba62f2a1497d71f7fde6.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-cd221b700c7e5128c607b316d87b2c378944b1d844089cef558ee7fecae26d81.json  query-d2d114dc58af8a3af3f742074d6be888aad553400126576fcfc6c775b6cb3b6f.json  query-de20d50a5d42c13808841c34bc86d99a88c4b553b009c4124ef1e2c18cbe3eb9.json  query-de52050c834c189f6c6dd903f46ef716cd87dc6af664ce97efbe64397bb77ac2.json  query-e1a28ee91e6d51893bdc381c7bcb3ac90de6aa656391f96e9e9c63cb85c4ce64.json  query-e9f8602d44fb1b4931c940e539474b8b8287ab96017db5c8b9e72eea2b5ecbb3.json
crates/api/: Cargo.toml
crates/api/src/: auth_utils.rs  errors.rs  lib.rs  main.rs  middleware.rs  routes.rs  state.rs  types.rs
crates/api/src/routes/: auth.rs  mod.rs  trading.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/auth/: Cargo.toml
crates/auth/src/: crypto.rs  error.rs  handlers.rs  jwt.rs  lib.rs  routes.rs  service.rs  types.rs  utils.rs
crates/core/: Cargo.toml
crates/core/src/: constants.rs  lib.rs  season_incentives.rs  xp.rs
crates/db/: Cargo.toml
crates/db/src/: config.rs  lib.rs  models.rs
crates/db/src/queries/: users.rs
crates/game/: Cargo.toml
crates/game/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  schema.rs
crates/storage/src/repo/: auth.rs  user.rs
migrations/: 0002_remove_account_level_xp.sql  0003_login_sessions.sql  0004_season_stats.sql  0005_login_sessions_index.sql  0006_login_sessions_timestamp_not_null.sql  0007_refresh_tokens.sql  0008_convert_timestamp_to_timestamptz.sql  001_initial_schema.sql  002_update_user_types.sql  003_user_types_standard.sql  01_init.sql
scripts/: update-db.sh
src/: main.rs
