[workspace]
members = [
  "crates/api",
  "crates/core"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["cors"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
rand = { version = "0.9.1" ,features = ["std", "alloc"] }
ethers = "2.0.14"