[workspace]
members = ["crates/api", "crates/app", "crates/db", "crates/game"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
axum-macros = "0.5.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "uuid",
  "chrono",
  "migrate",
  "tls-rustls",
  "bigdecimal"
] }
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
rand = { version = "0.9.1", features = ["std", "alloc"] }
ethers = "2.0.14"
siwe = "0.6.1"
iri-string = "0.7.8"
time = "0.3.41"
sha2 = "0.10.9"
tracing = "0.1.41"
thiserror = "2.0.12"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
async-trait = "0.1.88"
validator = { version = "0.20.0", features = ["derive"]}
regex = "1.11.1"

api = { path = "crates/api" }
app = { path = "crates/app" }
db = { path = "crates/db" }
game = { path = "crates/game" }