[package]
name = "vectra-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
tracing-subscriber = { workspace = true }
vectra-core = { path = "../core" }
vectra-storage = { path = "../storage" }
vectra-auth = { path = "../auth" }