[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ethers = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
regex = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }