[package]
name = "vectra-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
axum-macros = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
ethers = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
siwe = { workspace = true }
iri-string = { workspace = true }
time = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
vectra-storage = { path = "../storage" }
thiserror = { workspace = true }